<resources>
    <string name="app_name">Remember The Pills</string>
    <string name="profile">Профиль</string>
    <string name="course_history">История приёмов</string>
    <string name="add_drug">Добавление препарата</string>
    <string name="edit_drug">Редактирование препарата</string>
    <string name="drugs">Препараты</string>
    <string name="schedule">Расписание</string>
    <string name="add_course">Добавление курса</string>
    <string name="edit_course">Редактирование курса</string>
    <string name="add">Добавить</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="drug_name">Название препарата</string>
    <string name="drug_type">Тип препарата</string>

    <string name="drug">Препарат</string>
    <string name="course">Курс</string>

    <string name="drug_type_tablet">Таблетка</string>
    <string name="drug_type_inhaler">Ингалятор</string>
    <string name="drug_type_spray">Спрей</string>
    <string name="drug_type_injection">Инъекция</string>
    <string name="drug_type_drops">Капли</string>
    <string name="drug_type_ointment">Мазь</string>
    <string name="drug_type_powder">Порошок</string>
    <string name="drug_type_suppository">Свеча</string>
    <string name="drug_type_mixture">Микстура</string>

    <string name="drug_type_unit_pieces">Штуки</string>
    <string name="drug_type_unit_milligrams">Миллиграммы</string>
    <string name="drug_type_unit_milliliters">Миллилитры</string>
    <string name="drug_type_unit_units">Единицы</string>
    <string name="drug_type_unit_doses">Дозы</string>
    <string name="drug_type_unit_teaspoons">Чайные ложки</string>
    <string name="drug_type_unit_tablespoons">Столовые ложки</string>

    <string name="drug_type_unit_pieces_short">шт</string>
    <string name="drug_type_unit_milligrams_short">мг</string>
    <string name="drug_type_unit_milliliters_short">мл</string>
    <string name="drug_type_unit_units_short">ед</string>
    <string name="drug_type_unit_doses_short">д</string>
    <string name="drug_type_unit_teaspoons_short">чл</string>
    <string name="drug_type_unit_tablespoons_short">стл</string>

    <string name="drug_name_short">Препарат</string>
    <string name="dosage">Дозировка</string>
    <string name="measurement">Измерение</string>
    <string name="quantity">Количество</string>
    <string name="food_dependency">Зависимость от еды</string>

    <string name="food_dependency_before_meals">До еды</string>
    <string name="food_dependency_after_meal">После еды</string>
    <string name="food_dependency_while_eating">Во время еды</string>
    <string name="food_dependency_no">Не зависит</string>

    <string name="medication_period">Период приема</string>
    <string name="start_of_medication">Начало</string>
    <string name="end_of_medication">Конец</string>
    <string name="frequency_in_days_medication">Периодичность в днях</string>
    <string name="time_medication">Время приема</string>
    <string name="add_time_medication">Добавить время приема</string>
    <string name="missed_medication">Пропущено</string>

    <string name="pick_intake_time">Выберите время приёма</string>
    <string name="pick_course_start">Выберите дату начала приёма</string>
    <string name="pick_course_end">Выберите дату окончания приёма</string>

    <string name="drug_removal_confirmation_title">Удаление препарата</string>
    <string name="drug_removal_confirmation_message">Вы действительно хотите удалить препарат?</string>

    <string name="course_removal_confirmation_title">Удаление курса</string>
    <string name="course_removal_confirmation_message">Вы действительно хотите удалить курс?</string>

    <string name="removal_confirmation_answer_yes">Да</string>
    <string name="removal_confirmation_answer_no">Отмена</string>
    <string name="select_date">Изменить дату</string>
</resources>