<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/default_navigation"
        app:startDestination="@+id/fragmentSchedule">

    <fragment
            android:id="@+id/fragmentSchedule"
            android:name="com.airdron.mailcourse.fragments.schedule.FragmentSchedule"
            tools:layout="@layout/fragment_schedule"
            android:label="@string/schedule">
        <action
                android:id="@+id/action_fragmentSchedule_to_fragmentCourse"
                app:destination="@id/fragmentCourse" />
    </fragment>
    <fragment
            android:id="@+id/fragmentProfile"
            android:name="com.airdron.mailcourse.fragments.profile.FragmentProfile"
            tools:layout="@layout/fragment_profile"
            android:label="@string/profile">
        <action
                android:id="@+id/action_fragmentProfile_to_fragmentDrugList"
                app:destination="@id/fragmentDrugList" />
        <action
                android:id="@+id/action_fragmentProfile_to_fragmentCourseHistory"
                app:destination="@id/fragmentCourseHistory" />
    </fragment>
    <fragment
            android:id="@+id/fragmentDrugList"
            android:name="com.airdron.mailcourse.fragments.profile.FragmentDrugList"
            android:label="@string/drugs"
            tools:layout="@layout/fragment_drug_list">
        <action
                android:id="@+id/action_fragmentDrugList_to_fragmentDrug"
                app:destination="@id/fragmentDrug" />
    </fragment>
    <fragment
            android:id="@+id/fragmentCourse"
            android:name="com.airdron.mailcourse.fragments.schedule.FragmentCourse"
            android:label="@string/course"
            tools:layout="@layout/fragment_course">
        <argument
                android:name="action"
                app:argType="string" />
    </fragment>
    <fragment
            android:id="@+id/fragmentDrug"
            android:name="com.airdron.mailcourse.fragments.profile.FragmentDrug"
            android:label="@string/drug"
            tools:layout="@layout/fragment_drug">
        <argument
                android:name="action"
                app:argType="string" />
    </fragment>
    <fragment
            android:id="@+id/fragmentCourseHistory"
            android:name="com.airdron.mailcourse.fragments.profile.FragmentCourseHistory"
            android:label="@string/course_history"
            tools:layout="@layout/fragment_course_history" />

</navigation>